force-app/main/default/objects/Field_Tester_Junction__c/Field_Tester_Junction__c.object-meta.xml
<CustomObject>
    <description>https://jira.orderbird.com/browse/CRMT-3251</description>
    <label>Field Tester Junction</label>
    <nameField>
        <displayFormat>FTJ-{00000000}</displayFormat>
        <label>Field Tester Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Tester Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>