force-app/main/default/objects/Field_Tester_Junction__c/fields/Field_Tester__c.field-meta.xml
<CustomField>
    <fullName>Field_Tester__c</fullName>
    <label>Field Tester</label>
    <referenceTo>Field_Tester__c</referenceTo>
    <relationshipLabel>Field Tester Junctions</relationshipLabel>
    <relationshipName>Field_Tester_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>