force-app/main/default/objects/Field_Tester_Junction__c/fields/Field_Tester_Status__c.field-meta.xml
<CustomField>
    <fullName>Field_Tester_Status__c</fullName>
    <formula>TEXT(Field_Tester__r.Field_Tester_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Tester Status</label>
    <type>Text</type>
</CustomField>