force-app/main/default/objects/Field_Tester_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Customer_ID__c</columns>
    <columns>Field_Tester__c</columns>
    <columns>Field_Tester_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>